# docs/swagger.yaml
@@ -160,6 +160,149 @@ paths:
           description: 'Unauthorized'
         '404':
           description: 'Contact not found'
+
+  /users:
+    get:
+      tags:
+        - 'user'
+      summary: 'Get a list of users'
+      description: ''
+      responses:
+        '200':
+          description: 'Everything went well'
+          schema:
+            type: 'array'
+            items:
+              $ref: '#/definitions/UserSimplified'
+    post:
+      tags:
+        - 'user'
+      summary: 'Add a new user'
+      description: ''
+      parameters:
+        - in: 'body'
+          name: 'user'
+          description: 'User object that needs to be added in DB'
+          required: true
+          schema:
+            allOf:
+              - $ref: '#/definitions/UserEditableAttributes'
+              - type: 'object'
+                required:
+                  - 'email'
+      responses:
+        '201':
+          description: 'Created'
+          schema:
+            type: 'object'
+            $ref: '#/definitions/User'
+
+        '400':
+          description: 'Invalid input. The user object was not provided'
+          schema:
+            type: 'object'
+            properties:
+              errorMessage:
+                type: 'string'
+        '422':
+          description: 'Invalid input. The user object provided is not valid'
+          schema:
+            type: 'object'
+            $ref: "#/definitions/ValidationError"
+        '401':
+          description: 'Unauthorized'
+
+  /users/{userId}:
+    get:
+      tags:
+        - 'user'
+      summary: 'Find a user by ID'
+      description: 'Returns a single user'
+      parameters:
+        - name: 'userId'
+          in: 'path'
+          description: 'ID of user to return'
+          required: true
+          type: 'integer'
+          format: 'int64'
+      responses:
+        '200':
+          description: 'successful operation'
+          schema:
+            type: 'object'
+            $ref: '#/definitions/User'
+
+        '404':
+          description: 'user not found'
+    put:
+      tags:
+        - 'user'
+      summary: 'Update an existing user'
+      description: ''
+      parameters:
+        - name: 'apiKey'
+          in: 'query'
+          description: 'The key needed to access some parts of the API'
+          required: true
+          type: 'string'
+        - name: 'userId'
+          in: 'path'
+          description: 'ID of user to return'
+          required: true
+          type: 'integer'
+          format: 'int64'
+        - in: 'body'
+          name: 'user'
+          description: 'user object that needs to be updated'
+          required: true
+          schema:
+            $ref: '#/definitions/UserEditableAttributes'
+      responses:
+        '200':
+          description: 'Updated'
+          schema:
+            type: 'object'
+            $ref: '#/definitions/User'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'User not found'
+        '400':
+          description: 'Invalid input. The user object was not provided'
+          schema:
+            type: 'object'
+            properties:
+              errorMessage:
+                type: 'string'
+        '422':
+          description: 'Invalid input. The user object provided is not valid'
+          schema:
+            type: 'object'
+            $ref: "#/definitions/ValidationError"
+    delete:
+      tags:
+        - 'user'
+      summary: 'Deletes a user'
+      description: ''
+      parameters:
+        - name: 'apiKey'
+          in: 'query'
+          description: 'The key needed to access some parts of the API'
+          required: true
+          type: 'string'
+        - name: 'userId'
+          in: 'path'
+          description: 'user id to delete'
+          required: true
+          type: 'integer'
+          format: 'int64'
+      responses:
+        '204':
+          description: 'User Deleted'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'User not found'
 definitions:
   ValidationError:
     type: 'object'
@@ -191,6 +334,18 @@ definitions:
       email:
         type: 'string'
         example: 'john.doe@gmail.com'
+  UserEditableAttributes:
+    type: 'object'
+    properties:
+      email:
+        type: 'string'
+        example: 'john.doe@gmail.com'
+      password:
+        type: 'string'
+        example: '2TYVTYUF11@@%yuftrdesszejhvgez'
+      password_confirmation:
+        type: 'string'
+        example: '2TYVTYUF11@@%yuftrdesszejhvgez'
 
   ContactSimplified:
     type: 'object'
@@ -205,6 +360,16 @@ definitions:
         type: 'string'
         example: 'john.doe@gmail.com'
 
+  UserSimplified:
+    type: 'object'
+    properties:
+      id:
+        type: 'integer'
+        format: 'int64'
+      email:
+        type: 'string'
+        example: 'john.doe@gmail.com'
+
   Contact:
     allOf:
       - type: 'object'
@@ -213,3 +378,11 @@ definitions:
             type: 'integer'
             format: 'int64'
       - $ref: '#/definitions/ContactEditableAttributes'
+  User:
+    allOf:
+      - type: 'object'
+        properties:
+          id:
+            type: 'integer'
+            format: 'int64'
+      - $ref: '#/definitions/UserEditableAttributes'
