# routes/users.js
@@ -4,20 +4,19 @@ const usersController = require('../controllers/users.js');
 const protectByApiKey = require('../middlewares/protectByEnvAPIKey');
 const requireRequestBody = require('../middlewares/requireRequestBody.js');
 
-router.post(
-  '/',
-  protectByApiKey,
-  requireRequestBody,
-  asyncHandler(usersController.handlePost)
-);
-router.get('/', asyncHandler(usersController.getCollection));
-router.get('/:id', asyncHandler(usersController.findOne));
+router.post('/', requireRequestBody, asyncHandler(usersController.handlePost));
+router.get('/', asyncHandler(usersController.handleGetMany));
+router.get('/:id', asyncHandler(usersController.handleGetOne));
 router.put(
   '/:id',
   requireRequestBody,
   protectByApiKey,
-  asyncHandler(usersController.update)
+  asyncHandler(usersController.handlePatch)
 );
-router.delete('/:id', protectByApiKey, asyncHandler(usersController.delete));
+router.delete(
+  '/:id',
+  protectByApiKey,
+  asyncHandler(usersController.handleDeleteOne)
+);
 
 module.exports = router;
